# scroll_on_steroid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/esp_hid_bluedroid/: CMakeLists.txt  HID_bluedroid.c  HID_bluedroid.h  Kconfig  esp_hid_gap.c
hardware/: sos_lite_inner_bottom.stl  sos_lite_inner_upper.stl  sos_lite_outer_shell.stl
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.cpp  touch_Button.c  touch_Button.h  user_Config.h  user_Config_priv.h  user_HID_Descriptor.h  user_Types.h
